[gd_scene load_steps=6 format=2]

[ext_resource path="res://Temp Assets/PixelFantasy_Caves_1.0/props2.png" type="Texture" id=1]
[ext_resource path="res://Props/Shrine.gd" type="Script" id=2]
[ext_resource path="res://Systems/InteractHurtbox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Temp Assets/1-bit-input-prompts-pixel-16/Tilemap/tilemap_white.png" type="Texture" id=4]

[sub_resource type="CapsuleShape2D" id=1]
radius = 40.0
height = 64.0

[node name="Shrine" type="Node2D"]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )
region_enabled = true
region_rect = Rect2( 855, 101, 133, 75 )

[node name="InteractHurtbox" parent="." instance=ExtResource( 3 )]

[node name="CollisionShape2D" parent="InteractHurtbox" index="0"]
rotation = -1.5708
shape = SubResource( 1 )

[node name="InteractNotification" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -56 )
texture = ExtResource( 4 )
region_enabled = true
region_rect = Rect2( 325, 172, 11, 11 )

[connection signal="area_entered" from="InteractHurtbox" to="." method="_on_InteractHurtbox_area_entered"]
[connection signal="area_exited" from="InteractHurtbox" to="." method="_on_InteractHurtbox_area_exited"]

[editable path="InteractHurtbox"]
